--- a/src/app/shared/table-of-contents/table-of-contents.html
+++ b/src/app/shared/table-of-contents/table-of-contents.html
@@ -9,13 +9,15 @@
 </div> -->
 
 
-<div *ngIf="links?.length" class="docs-toc-container">
+<div *ngIf="links?.length"
+     class="docs-toc-container">
   <div class="docs-toc-heading">Contents</div>
   <nav>
-    <a *ngFor="let link of links; let i = index" class="docs-level-{{link.type}} docs-link"
-      [class.docs-active]="link.active" (click)="redirect(link.id)">
+    <a *ngFor="let link of links; let i = index"
+       class="docs-level-{{link.type}} docs-link"
+       [class.docs-active]="link.active"
+       (click)="redirect(link.id)">
       {{link.name}}
     </a>
-    <a class="docs-sketch-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sketch File</a>
   </nav>
 </div>
