--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title">
-    Button & Indicatiors
+    Button &amp; Indicatiors
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -15,7 +15,7 @@
     Buttons make common actions immediately visible and easy to perform with one click or tap. They can be used for any type
     of action, including navigation.
   </div>
-   
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
@@ -57,7 +57,7 @@
       <div app-docs-example="button-icon-right"></div>
     </div>
     <div class="doc-desc-2">
-      Use for actions that aren’t currently available.
+      Use for actions that aren&#x2019;t currently available.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="button-disable"></div>
@@ -111,7 +111,7 @@
     <ul class="doc-list">
       <li>Be clearly and accurately labeled.</li>
       <li>Lead with strong, actionable verbs.</li>
-      <li>Use established button colors appropriately. For example, only use a red button for an action that’s difficult or impossible
+      <li>Use established button colors appropriately. For example, only use a red button for an action that&#x2019;s difficult or impossible
         to undo.</li>
       <li>Prioritize the most important actions. Too many calls to action can cause confusion and make merchants unsure of what
         to do next.</li>
@@ -125,12 +125,12 @@
 
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Buttons should be clear and predictable—data analyst should be able to anticipate what will happen when they click a button.
+    Buttons should be clear and predictable&#x2014;data analyst should be able to anticipate what will happen when they click a button.
     Never deceive them by mislabeling a button.
   </div>
   <div class="docs-guideline-group">
@@ -142,7 +142,7 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Don’t wrap text. For maximum legibility, a text label should remain on a single line.
+    Don&#x2019;t wrap text. For maximum legibility, a text label should remain on a single line.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -165,16 +165,18 @@
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-      Component Location for Designers
-      <span class="docs-markdown-h3" id="component_location_for_designers">
-        <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-    </div>
+    Component Location for Designers
+    <span class="docs-markdown-h3" id="component_location_for_designers">
+      <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
+
 
 </body>
-
 
 </html>
