--- a/src/assets/documents/components/colors.html
+++ b/src/assets/documents/components/colors.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="doc-desc-2">
-    A primary color is the color displayed most frequently across Vizient products’ screens and components. To create contrast
+    A primary color is the color displayed most frequently across Vizient products&#x2019; screens and components. To create contrast
     between UI elements,you can use light or dark variants of your primary color on each elements.
   </div>
 
@@ -220,7 +220,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Tertiary colors are used for most Vizient products’ chart and graph.
+    Tertiary colors are used for most Vizient products&#x2019; chart and graph.
   </div>
 
 
@@ -346,12 +346,14 @@
         across all screen and device types.
       </li>
       <li>
-        Expressive: Reinforce your brand by showing brand colors at memorable moments that reinforce your brand’s style.
+        Expressive: Reinforce your brand by showing brand colors at memorable moments that reinforce your brand&#x2019;s style.
       </li>
     </ul>
   </div>
 
-  
+
+
+
 
 
 </body>
