--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -78,7 +78,7 @@
       </tr>
       <tr>
         <td>onApply</td>
-        <td>Specifies the callback clicking 'Apply' button</td>
+        <td>Specifies the callback clicking &apos;Apply&apos; button</td>
         <td>function</td>
         <td>undefined</td>
       </tr>
@@ -103,7 +103,7 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -135,14 +135,16 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
 
-  </div>
+
+
+
+
 </body>
-
 
 </html>
