--- a/src/assets/documents/components/designers.html
+++ b/src/assets/documents/components/designers.html
@@ -12,8 +12,8 @@
     Designers
   </div>
   <div class="doc-desc-1">
-    The purpose of the Toolkit Material Library is to streamline the process of Vizient’s design workflow. It is a crucial resource
-    and acts as the ‘source for truth’ for all UI components for which Vizient products are comprised of.
+    The purpose of the Toolkit Material Library is to streamline the process of Vizient&#x2019;s design workflow. It is a crucial resource
+    and acts as the &#x2018;source for truth&#x2019; for all UI components for which Vizient products are comprised of.
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -36,15 +36,15 @@
     Working with UI toolkit as a Sketch library
   </div>
   <div class="doc-desc-2">
-    Sketch library makes working across multiple files easy. To have access to all of the ‘Toolkit Material Library’ symbols,
-    you'll need to load the files as a Sketch libraries.
+    Sketch library makes working across multiple files easy. To have access to all of the &#x2018;Toolkit Material Library&#x2019; symbols,
+    you&apos;ll need to load the files as a Sketch libraries.
 
     <ul>
       <li class="doc-desc-2">
-        Open Sketch > Preferences > Libraries > Add Library
+        Open Sketch &gt; Preferences &gt; Libraries &gt; Add Library
       </li>
       <li class="doc-desc-2">
-        Navigate to find and select the ‘Toolkit Material Library’ Sketch file
+        Navigate to find and select the &#x2018;Toolkit Material Library&#x2019; Sketch file
       </li>
       <li class="doc-desc-2">
         Now you will be able to access all of the icons from any Sketch document from the insert menu.
@@ -64,7 +64,7 @@
       of Sketch.
     </p>
     <p>
-      Updates are indicated by a badge that Sketch displays in the top right hand corner. You’ll be able to see all of the symbols
+      Updates are indicated by a badge that Sketch displays in the top right hand corner. You&#x2019;ll be able to see all of the symbols
       that have been updated and select which ones you want to receive at any given time.
     </p>
   </div>
@@ -84,7 +84,7 @@
       to help you quickly create dynamic workflows.
     </p>
     <p>
-      The example below demonstrates how to change an input field from it’s default to selected style.
+      The example below demonstrates how to change an input field from it&#x2019;s default to selected style.
     </p>
   </div>
 
@@ -110,12 +110,14 @@
 
   <div class="doc-desc-2">
     <p>
-      The toolkit system includes the resources needed to create user interfaces consistent with the Vizient’s product principles,
+      The toolkit system includes the resources needed to create user interfaces consistent with the Vizient&#x2019;s product principles,
       design language, and best practices. Rather than focusing on pixels, developers can focus on the application logic,
       while designers can focus on user experiences, interactions, and flows.
     </p>
 
   </div>
+
+
 
 
 </body>
