--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title ">
-    Popups & Modals
+    Popups &amp; Modals
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -29,7 +29,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Dialogs should be used for: Errors that block an app’s normal operation. Critical information that requires a specific user
+    Dialogs should be used for: Errors that block an app&#x2019;s normal operation. Critical information that requires a specific user
     task, decision, or acknowledgement.</div>
   <div class="doc-example-container">
     <div app-docs-example="dialog-basic"></div>
@@ -64,7 +64,7 @@
           to begin with.
 
         </td>
-        <td>Observable&lt;void&gt;></td>
+        <td>Observable&lt;void&gt;&gt;</td>
         <td></td>
       </tr>
       <tr>
@@ -118,8 +118,8 @@
   </div>
 
   <div class="doc-desc-2">
-    This dialog title poses a specific question, concisely explains what’s involved in the request, and provides clear actions.
-    Don’t use dialog titles that pose an ambiguous question.
+    This dialog title poses a specific question, concisely explains what&#x2019;s involved in the request, and provides clear actions.
+    Don&#x2019;t use dialog titles that pose an ambiguous question.
   </div>
 
   <div class="docs-guideline-group">
@@ -167,11 +167,15 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+
+  <div sketch-link=""></div>
+
+
 
 
 
