--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Expansion panels provides extra information in details-summary view of its header, that’s easy to scan, so that users can
+    Expansion panels provides extra information in details-summary view of its header, that&#x2019;s easy to scan, so that users can
     look for patterns and insights.
   </div>
 
@@ -87,7 +87,7 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -125,13 +125,15 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
+
+
 </body>
-
-
 
 </html>
