--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title ">
-    Button & Indicators
+    Button &amp; Indicators
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -91,7 +91,7 @@
     Feedback indicator should:
     <ul class="doc-list">
       <li>Focus on a single theme, piece of information, or required action to avoid overwhelming users.</li>
-      <li>Be concise and scannable – users shouldn’t need to spend a lot of time figuring out what they need to know and do.</li>
+      <li>Be concise and scannable &#x2013; users shouldn&#x2019;t need to spend a lot of time figuring out what they need to know and do.</li>
       <li>Be limited to a few important calls to action with no more than one primary action.</li>
     </ul>
   </div>
@@ -102,7 +102,7 @@
 
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -137,11 +137,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 </body>
