--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -48,7 +48,7 @@
       <div app-docs-example="form-field-textarea"></div>
     </div>
     <div class="doc-desc-2">
-      When text input isn’t accepted, the field turns to red.
+      When text input isn&#x2019;t accepted, the field turns to red.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="form-field-error"></div>
@@ -113,8 +113,8 @@
   <div class="doc-desc-2">
     Form field should:
     <ul class="doc-list">
-      <li>Be clearly labeled so it’s obvious to the users what they should enter into the field</li>
-      <li>Only ask for information that’s really needed</li>
+      <li>Be clearly labeled so it&#x2019;s obvious to the users what they should enter into the field</li>
+      <li>Only ask for information that&#x2019;s really needed</li>
       <li>Validate input as soon as user has finished interacting with a field</li>
     </ul>
   </div>
@@ -122,12 +122,12 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Label text should be short, clear, and fully visible. It shouldn’t be truncated.
+    Label text should be short, clear, and fully visible. It shouldn&#x2019;t be truncated.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -138,7 +138,7 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Label text shouldn’t take up multiple lines.
+    Label text shouldn&#x2019;t take up multiple lines.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -165,11 +165,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 </body>
 
