--- a/src/assets/documents/components/headerfooter.html
+++ b/src/assets/documents/components/headerfooter.html
@@ -9,10 +9,10 @@
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Header & Footer
+    Header &amp; Footer
   </div>
   <div class="doc-desc-1">
-      Header & Footer appear on top & botton all other surfaces in an app, displaying information and actions relating to the current screen.
+    Header &amp; Footer appear on top &amp; botton all other surfaces in an app, displaying information and actions relating to the current screen.
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -21,7 +21,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-      Header & Footer are a special kind of toolbar that’s used for branding, navigation, search, and actions.
+    Header &amp; Footer are a special kind of toolbar that&#x2019;s used for branding, navigation, search, and actions.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="header-footer-basic"></div>
@@ -34,7 +34,7 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized header & footer, just set
+    To get a customized header &amp; footer, just set
     <span class="doc-desc-2-highlight">title/userName/brandLink/svgIcon/type/leftBrands/rightBrands</span>
   </div>
   <table class="doc-props-table">
@@ -115,7 +115,7 @@
     <ul class="doc-list">
       <li>Persistent: Header and Footer appear at the top and bottom of each screen in an app, and can disappear upon scroll.</li>
       <li>Guiding: Header and Footer provide a reliable way to guide users through an app.</li>
-      <li>Consistent:  Header and Footer have a consistent position and content to increase familiarity.</li>
+      <li>Consistent: Header and Footer have a consistent position and content to increase familiarity.</li>
       <li>Immediate: Header and Footer can be accessed from any scroll position.</li>
     </ul>
   </div>
@@ -126,12 +126,12 @@
 
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-      If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title may cause misunderstanding. Don’t shrink text to fit on a single line.
+    If title text is long, use a prominent app bar and wrap the title to two lines. Don&#x2019;t truncate text, hiding the full title may cause misunderstanding. Don&#x2019;t shrink text to fit on a single line.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:272px">
@@ -152,8 +152,10 @@
     <img src="assets/img/doc/header-footer-spec.png" alt="">
   </div>
 
-  
-</body>
 
+
+
+
+</body>
 
 </html>
