--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title">
-    Button & Indicatiors
+    Button &amp; Indicatiors
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -101,12 +101,12 @@
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Make icons graphic and bold. Don’t use delicate, thin stroke weights.
+    Make icons graphic and bold. Don&#x2019;t use delicate, thin stroke weights.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -117,7 +117,7 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Use geometric, consistent shapes. Don’t use gestural or loose organic shapes.
+    Use geometric, consistent shapes. Don&#x2019;t use gestural or loose organic shapes.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -128,7 +128,7 @@
     </div>
   </div>
   <div class="doc-desc-2">
-    Use consistent stroke weights and squared stroke terminals. Don’t use inconsistent stroke weights or rounded stroke terminals.
+    Use consistent stroke weights and squared stroke terminals. Don&#x2019;t use inconsistent stroke weights or rounded stroke terminals.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
@@ -154,11 +154,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 </body>
 
