--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -70,8 +70,8 @@
   <div class="doc-desc-2">
     Login should:
     <ul class="doc-list">
-      <li>Be clearly labeled so it’s obvious to the users what they need to provide to be logged in.</li>
-      <li>Only ask for information that’s really needed.</li>
+      <li>Be clearly labeled so it&#x2019;s obvious to the users what they need to provide to be logged in.</li>
+      <li>Only ask for information that&#x2019;s really needed.</li>
       <li>Validate input as soon as user has finished interacting with a field.</li>
     </ul>
   </div>
@@ -88,7 +88,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Label text should be short, clear, and fully visible. It shouldn’t be truncated.
+    Label text should be short, clear, and fully visible. It shouldn&#x2019;t be truncated.
   </div>
 
   <div class="docs-guideline-group">
@@ -133,11 +133,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 </body>
