--- a/src/assets/documents/components/misc.html
+++ b/src/assets/documents/components/misc.html
@@ -1,27 +1,35 @@
 <!-- <div class="doc-example-container">
     <div app-docs-example="breadscrumb-basic"></div>
 </div> -->
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="search-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="breadscrumb-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="line-chart-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="bar-chart-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="progress-bar-chart-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="dot-plot-chart-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="comparative-chart-basic"></div>
-</div>
-<div class="doc-example-container docs-mb24">
-  <div app-docs-example="benchmark-chart-basic"></div>
-</div>
+<html>
+
+<head></head>
+
+<body>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="search-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="breadscrumb-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="line-chart-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="bar-chart-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="progress-bar-chart-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="dot-plot-chart-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="comparative-chart-basic"></div>
+  </div>
+  <div class="doc-example-container docs-mb24">
+    <div app-docs-example="benchmark-chart-basic"></div>
+  </div>
+</body>
+
+</html>
