--- a/src/assets/documents/components/paginator.html
+++ b/src/assets/documents/components/paginator.html
@@ -148,7 +148,8 @@
         </td>
         <td>
           EventEmitter
-          <PageEvent>
+          <pageevent>
+          </pageevent>
         </td>
         <td>
 
@@ -159,11 +160,12 @@
           initialized
         </td>
         <td>
-          Stream that emits once during the directive/component's ngOnInit.
+          Stream that emits once during the directive/component&apos;s ngOnInit.
         </td>
         <td>
           Observable&lt;void&gt;
           <void>
+          </void>
         </td>
         <td>
         </td>
@@ -204,7 +206,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Dropdown: Use the app’s primary color to indicate an active selection.
+    Dropdown: Use the app&#x2019;s primary color to indicate an active selection.
   </div>
 
   <div class="docs-guideline-group">
@@ -217,7 +219,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Don’t break paginator to two lines
+    Don&#x2019;t break paginator to two lines
   </div>
 
   <div class="docs-guideline-group">
@@ -250,11 +252,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 
