--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title ">
-    Button & Indicatiors
+    Button &amp; Indicatiors
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -63,7 +63,7 @@
       <tr>
         <td>mode</td>
         <td>Mode of the progress bar. Input must be one of these values: determinate, indeterminate, buffer, query, defaults
-          to 'determinate'. Mirrored to mode attribute.</td>
+          to &apos;determinate&apos;. Mirrored to mode attribute.</td>
         <td>string</td>
         <td>determinate</td>
       </tr>
@@ -95,7 +95,7 @@
   <div class="doc-desc-2">
     Linear progress indicators support both determinate and indeterminate operations.
     <ul class="doc-list">
-      <li>Determinate operations display the indicator increasing in width from 0 to 100% of the track, in sync with the process’s
+      <li>Determinate operations display the indicator increasing in width from 0 to 100% of the track, in sync with the process&#x2019;s
         progress.
       </li>
       <li>Indeterminate operations display the indicator continually growing and shrinking along the track until the process
@@ -152,11 +152,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 
