--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -42,7 +42,7 @@
       <div app-docs-example="slider-basic-icon"></div>
     </div>
     <div class="doc-desc-2">
-      Use continuous sliders allow users to make meaningful selections that don’t require a specific value.</div>
+      Use continuous sliders allow users to make meaningful selections that don&#x2019;t require a specific value.</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-continue"></div>
     </div>
@@ -165,11 +165,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 
