--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title ">
-    Popups & Modals
+    Popups &amp; Modals
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -13,7 +13,7 @@
   </div>
   <div class="doc-desc-1">
     Snackbars provide brief feedback about an operation through a message - typically at the bottom of the screen. They appear
-    temporarily, towards the bottom of the screen. They shouldn’t interrupt the user experience, and they don’t require user
+    temporarily, towards the bottom of the screen. They shouldn&#x2019;t interrupt the user experience, and they don&#x2019;t require user
     input to disappear. They may contain a text action, but no icons. Only one snackbar may be displayed at a time.
   </div>
 
@@ -113,7 +113,7 @@
     Snackbars should:
     <ul class="doc-list">
       <li>
-        Informational: Snackbars provide updates on an app’s processes.</li>
+        Informational: Snackbars provide updates on an app&#x2019;s processes.</li>
       <li>
         Temporary: Snackbars appear temporarily, and disappear on their own without requiring user input to be dismissed.</li>
       <li>
@@ -147,7 +147,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Don’t place icons in snackbars. If your message needs an icon, consider using an alert.
+    Don&#x2019;t place icons in snackbars. If your message needs an icon, consider using an alert.
   </div>
 
   <div class="docs-guideline-group">
@@ -158,7 +158,7 @@
 
 
   <div class="doc-desc-2">
-    The text label shouldn’t share the same color as the text button.
+    The text label shouldn&#x2019;t share the same color as the text button.
   </div>
 
   <div class="docs-guideline-group">
@@ -169,7 +169,7 @@
 
 
   <div class="doc-desc-2">
-    Don’t use a filled or elevated button in a snackbar, as it draws too much attention.
+    Don&#x2019;t use a filled or elevated button in a snackbar, as it draws too much attention.
   </div>
 
   <div class="docs-guideline-group">
@@ -202,11 +202,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 </body>
 
