--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -98,7 +98,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Don’t wrap text. For maximum legibility, a text label should remain on a single line.
+    Don&#x2019;t wrap text. For maximum legibility, a text label should remain on a single line.
   </div>
 
   <div class="docs-guideline-group">
@@ -112,7 +112,7 @@
 
 
   <div class="doc-desc-2">
-    Don’t place imagery in toolbar that makes the toolbar’s text and icons illegible. </div>
+    Don&#x2019;t place imagery in toolbar that makes the toolbar&#x2019;s text and icons illegible. </div>
 
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
@@ -149,6 +149,8 @@
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
   <div sketch-link></div> -->
+
+
 
 
 </body>
