--- a/src/assets/documents/components/tooltip.html
+++ b/src/assets/documents/components/tooltip.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title ">
-    Popups & Modals
+    Popups &amp; Modals
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
@@ -143,6 +143,7 @@
         <td>
           string | string[] | Set
           <string> | { [key: string]: any; }
+          </string>
         </td>
         <td>
 
@@ -190,7 +191,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Don’t display shadows on tooltips
+    Don&#x2019;t display shadows on tooltips
   </div>
 
   <div class="docs-guideline-group">
@@ -203,7 +204,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Don’t display rich information and imagery on tooltips
+    Don&#x2019;t display rich information and imagery on tooltips
   </div>
 
   <div class="docs-guideline-group">
@@ -238,11 +239,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 </body>
