--- a/src/assets/documents/components/typography.html
+++ b/src/assets/documents/components/typography.html
@@ -69,7 +69,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Body text comes in ranges 1-4, and it’s typically used for long-form writing as it works well for small text sizes. For longer
+    Body text comes in ranges 1-4, and it&#x2019;s typically used for long-form writing as it works well for small text sizes. For longer
     sections of text, a serif or sans serif typeface is recommended.
   </div>
 
@@ -85,6 +85,8 @@
   </div>
 
   <img src="assets/img/smalllabel.svg" alt="" srcset="" height="300" width="800">
+
+
 
 </body>
 
