--- a/src/assets/documents/components/footer.html
+++ b/src/assets/documents/components/footer.html
@@ -23,7 +23,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Footer are a special kind of toolbar that’s used for branding, navigation, search, and actions. </div>
+    Footer are a special kind of toolbar that&#x2019;s used for branding, navigation, search, and actions. </div>
   <div class="doc-example-container">
     <div app-docs-example="footer-basic"></div>
   </div>
@@ -35,7 +35,7 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized header & footer, just set
+    To get a customized header &amp; footer, just set
     <span class="doc-desc-2-highlight">leftBrands/rightBrands</span>
   </div>
   <table class="doc-props-table">
@@ -85,13 +85,13 @@
 
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title
-    may cause misunderstanding. Don’t shrink text to fit on a single line.
+    If title text is long, use a prominent app bar and wrap the title to two lines. Don&#x2019;t truncate text, hiding the full title
+    may cause misunderstanding. Don&#x2019;t shrink text to fit on a single line.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
@@ -120,13 +120,15 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
+
 
 </body>
-
 
 </html>
