--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -126,11 +126,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 </body>
 
