--- a/src/assets/documents/components/menu.html
+++ b/src/assets/documents/components/menu.html
@@ -77,7 +77,7 @@
       <tr>
         <td>panelClass</td>
         <td>This method takes classes set on the host mat-menu element and applies them on the menu template that displays in
-          the overlay container. Otherwise, it's difficult to style the containing menu from outside the component.</td>
+          the overlay container. Otherwise, it&apos;s difficult to style the containing menu from outside the component.</td>
         <td>string</td>
         <td></td>
       </tr>
@@ -179,11 +179,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 
