--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -11,7 +11,7 @@
   <div class="doc-title-1">
     No Data </div>
   <div class="doc-desc-1">
-    Help the user know when there is no data. Don't assume that they'll interpret a blank table or field as "no data". They might
+    Help the user know when there is no data. Don&apos;t assume that they&apos;ll interpret a blank table or field as &quot;no data&quot;. They might
     think the application is broken.</div>
 
   <div class="doc-divider">
@@ -89,7 +89,7 @@
 
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
@@ -124,11 +124,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 </body>
