--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -24,7 +24,7 @@
   </div>
   <div class="doc-desc-2">
     Sidenavs are anchored to the left or right edge of the screen. They are a fixed width and typically span the height of the
-    screen. Their dimensions depend on how the app’s layout is subdivided into UI regions.</div>
+    screen. Their dimensions depend on how the app&#x2019;s layout is subdivided into UI regions.</div>
   <div class="doc-example-container">
     <div app-docs-example="sidenav-basic"></div>
   </div>
@@ -82,13 +82,13 @@
 
 
   <div class="doc-title-2">
-    Usage & Content Guidelines
+    Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
   <div class="doc-desc-2">
-    Use full-width dividers to separate groups of destinations. Don’t use dividers to separate individual destinations.
+    Use full-width dividers to separate groups of destinations. Don&#x2019;t use dividers to separate individual destinations.
   </div>
 
   <div class="docs-guideline-group">
@@ -101,7 +101,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Don’t apply icons to some destinations and not others. Icons should be used for all destinations, or none.
+    Don&#x2019;t apply icons to some destinations and not others. Icons should be used for all destinations, or none.
   </div>
 
   <div class="docs-guideline-group">
@@ -129,11 +129,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 </body>
 
