--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -11,7 +11,7 @@
   <div class="doc-title-1">
     Slide Toggle </div>
   <div class="doc-desc-1">
-    Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations. </div>
+    Slider Toggles are used for binary actions. They are commonly used for &#x201C;On/Off&#x201D; situations. </div>
 
   <div class="doc-divider">
   </div>
@@ -132,11 +132,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 </body>
