--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -60,7 +60,7 @@
 
         </td>
         <td>string</td>
-        <td>'before' | 'after'</td>
+        <td>&apos;before&apos; | &apos;after&apos;</td>
       </tr>
       <tr>
         <td>disableClear</td>
@@ -84,7 +84,7 @@
       </tr>
       <tr>
         <td>mat-sort-header</td>
-        <td>ID of this sort header. If used within the context of a CdkColumnDef, this will default to the column's name.
+        <td>ID of this sort header. If used within the context of a CdkColumnDef, this will default to the column&apos;s name.
 
 
 
@@ -103,7 +103,7 @@
 
         </td>
         <td>string</td>
-        <td>'asc' | 'desc'</td>
+        <td>&apos;asc&apos; | &apos;desc&apos;</td>
       </tr>
     </tbody>
   </table>
@@ -117,7 +117,7 @@
   <div class="doc-desc-2">
 
     <p>
-      Data tables display information in a way that’s easy to scan, so that users can look for patterns and insights. They can
+      Data tables display information in a way that&#x2019;s easy to scan, so that users can look for patterns and insights. They can
       be embedded in primary content, such as cards.
     </p>
     <p>Data tables can include:</p>
@@ -178,11 +178,13 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div>
+  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
-  <div sketch-link></div>
+  <div sketch-link=""></div>
+
+
 
 
 
